--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,11 +1,3 @@
-/*========================================================================
-EXCLUSIVE ON themeforest.net
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Template Name   : Moxo
-Author          : mital_04
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-Copyright (c) 2018 - mital_04
-========================================================================*/
 
 /*----------------------------------
 Table of contents
@@ -928,6 +920,10 @@ img {
 }
 .contact-map .embed-responsive {
   height: 230px;
+}
+
+#rchars{
+  padding-bottom: 15px;
 }
 
 /*---------------------------------
